*Empty MediaWiki Message*

--- a/Ohio_(ståt).mw
+++ b/Ohio_(ståt).mw
@@ -1,8 +1,8 @@
-'''Ohio''' (uutspråke: {{IPA|/oˈhaɪo/}}) is nen stat in et noordousten van de [[midweststreake]] van de [[Vereynigde Ståten]]. Van de vyvtig stat is et de 34. up uppervlakte, de söävende up inwoanertal en de teende drukstbevolkede. De grötste stad en höyvdstad is [[Columbus (Ohio)|Kolumbus]]. Et versteadelikte gebeed rund dee stad, Grout [[Cincinatti]] en Grout Cleveland sint de grötste metropolen.
+'''Ohio''' (uutspråke: {{IPA|/oˈhaɪo/}}) is nen stat in et noordousten van de [[midweststreake]] van de [[Vereynigde Ståten]]. Van de vyvtig ståten is et de 34. up uppervlakte, de söävende up inwoanertal en de teende drukstbevolkede. De grötste stad en höyvdstad is [[Columbus (Ohio)|Kolumbus]]. Et versteadelikte gebeed rund dee stad, Grout [[Cincinatti]] en Grout Cleveland sint de grötste metropolen.
 
 Ohio grenset an et Eriemear in et noorden, den ståt [[Pennsylvania]] up et ousten, [[Westvirginia]] up et süüdousten, [[Kentucky]] up et süüdwesten, [[Indiana]] up et westen en [[Michigan]] up et noordwesten.
 
-De name danket den ståt an de rivyr [[Ohio (rivyr)|Ohio]]. Dee name kümt weader van et [[Seneka (språke)|senekaanske]] woord ohi:yo’, wat ‘goden rivyr’, ‘grouten rivyr’ of ‘grouten ströym’ bedüdet. Ohio wör as 17. ståt by et gröttere verbund edån up den [[1 meert|1. määrt]] [[1803]]. Ne byname vöär den ståt is de “Buckeye State” (kastanjeståt), når de ohiaanske kastanjeböyme.
+De name danket den ståt an de rivyr [[Ohio (rivyr)|Ohio]]. Dee name kümt weader van et [[Seneka (språke)|senekaanske]] woord ''ohi:yo’'', wat ‘goden rivyr’, ‘grouten rivyr’ of ‘grouten ströym’ bedüdet. Ohio wör as 17. ståt by et gröttere verbund edån up den [[1 meert|1. määrt]] [[1803]]. Ne byname vöär den ståt is de “Buckeye State” (kastanjeståt), når de ohiaanske kastanjeböyme.
 
 In de [[kolonialisme|koloniale tyd]] unstünd Ohio as deyl van et [[Noordwestelike Territorium]] up et westen van de [[Appalachen]] nå de [[Noordwestelike Indianenoorlogen]]. Et wör den eyrsten neet-kolonialen vryståt by et Verbund. Et untwikkelden sik rap töt industrieel centrum in de [[20ste eeuw|20. eywe]] en groiden do voordan töt ne ekonomy wat et meyr van informaty en deenstverleyning müt hebben in de 21. eywe.
 
