--- a/Ohio_(ståt).mw
+++ b/Ohio_(ståt).mw
@@ -6,7 +6,7 @@ De name danket den ståt an de rivyr [[Ohio (rivyr)|Ohio]]. Dee name kümt weade
 
 In de [[kolonialisme|koloniale tyd]] unstünd Ohio as deyl van et [[Noordwestelike Territorium]] up et westen van de [[Appalachen]] nå de [[Noordwestelike Indianenoorlogen]]. Et wör den eyrsten neet-kolonialen vryståt by et Verbund. Et untwikkelden sik rap töt industrieel centrum in de [[20ste eeuw|20. eywe]] en groiden do voordan töt ne ekonomy wat et meyr van informaty en deenstverleyning müt hebben in de 21. eywe.
 
-De regeyring van Ohio besteyt uut nen uutvorenden tak under leiding van nen gouvernöör. Den wetgeavenden tak hevt en tweykamerstelsel wat de Algemeyne Vergåring van Ohio nöömd wördt. Den rechterliken macht wördt eleided döär et hougerechtshov. Ohio beset 16 stöle in et Amerikaanske Huus van Ofvaerdigden. Den ståt steyt bekend as wesselståt (Swing State) en bellwether by landelike verkesingen. Söäven amerikaanske presidenten kümmen uut Ohio.
+De regeyring van Ohio besteyt uut nen uutvorenden tak under leiding van nen gouvernöör. Den wetgeavenden tak hevt en tweykamerstelsel wat de Algemeyne Vergåring van Ohio nöömd wördt. Den rechterliken macht wördt eleided döär et hougerechtshov. Ohio beset 16 stöle in et Amerikaanske Huus van Ofvaerdigden. Den ståt steyt bekend as wesselståt (Swing State) en bellwether (tounangeavend in verkesingen) by landelike verkesingen. Söäven amerikaanske presidenten kümmen uut Ohio.
 
 Ohio is groutendeyls noch nen industryståt en stünd in 2015 wat BBP angeyt up de 8. steade in de lyste van 50 ståten. Et is den dardegrötsten amerikaansken fabriksståt en de tweydegrötste maker van [[auto|wagens]], up [[Michigan]] nå.
 
