*Empty MediaWiki Message*

--- a/Ohio_(ståt).mw
+++ b/Ohio_(ståt).mw
@@ -1,3 +1,20 @@
+{{Amerikaanse staot
+| naam = Ohio
+| biejnoam = ''Kastanjeståt''
+| vlagge = [[Bestaand:Flag of Ohio.svg|125px|border|Vlagge van Ohio]]
+| wapen = [[Bestaand:Seal of Ohio.svg|110px|Woapen van Ohio]]
+| kaorte = Map of USA OH.svg
+| heufstad = [[Kolumbus (Ohio)|Kolumbus]]
+| toe-etrejen = [[1 määrt]] [[1803]]
+| oppervlak laand = 116.096 
+| oppervlak waoter = 8,7%
+| inwoeners = 11.689.100  ([[2019]])
+| dichtheid = 109
+| tiedzone = −4/−5
+| antal graafschappen = 33
+| ofkorting = OH
+}}
+
 '''Ohio''' (uutspråke: {{IPA|/oˈhaɪo/}}) is nen stat in et noordousten van de [[midweststreake]] van de [[Vereynigde Ståten]]. Van de vyvtig ståten is et de 34. up uppervlakte, de söävende up inwoanertal en de teende drukstbevolkede. De grötste stad en höyvdstad is [[Columbus (Ohio)|Kolumbus]]. Et versteadelikte gebeed rund dee stad, Grout [[Cincinatti]] en Grout Cleveland sint de grötste metropolen.
 
 Ohio grenset an et Eriemear in et noorden, den ståt [[Pennsylvania]] up et ousten, [[Westvirginia]] up et süüdousten, [[Kentucky]] up et süüdwesten, [[Indiana]] up et westen en [[Michigan]] up et noordwesten.
