--- a/Griekse_alfabet.mw
+++ b/Griekse_alfabet.mw
@@ -1,5 +1,5 @@
 {{Griekse Letter}}
-De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alfabet]] is in de oldheid (om en bie de [[9e eeuw v. Chr.|9e ieuw v. Kr.]]) ontwikkeld uut t [[Fenicisch alfabet|Fenisische schrift]] en bestoat uut 24 klassieke letters, en n poar verolderden/neet klassieken. t Wordt nog aal ien [[Griekenlaand]] nuttegd.
+De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alfabet]] is in de oldheid (om en bie de [[9e eeuw v. Chr.|9e ieuw v. Kr.]]) ontwikkeld uut t [[Fenicisch alfabet|Fenisische schrift]] en bestaat uut 24 klassieke letters, en n poar verolderden/neet klassieken. t Wordt nog aal ien [[Griekenlaand]] nuttegd.
 
 == Klassiek ==
 {|class="wikitable"
