[[:Kategorie:Media]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Me_at_the_zoo.mw
+++ b/Me_at_the_zoo.mw
@@ -6,3 +6,5 @@ Volgens de Los Angeles Times:''"As the first video uploaded to YouTube, it playe
 ==Verwiezing==
 <references/>
 {{Dialekt|sdz}}
+
+[[Kategorie:Media]]
