--- a/YouTube.mw
+++ b/YouTube.mw
@@ -1,10 +1,10 @@
 [[Bestaand:YouTube Logo 2017.svg|rechts|kaoderloos]]
-'''YouTube''' (sprek oet: ''JOEW-tsjoewb'' of ''JOEW-toewb''), in [[Tweante]] vake oet esprökn as ''joetoep'', is ne webstea woerop leu zik köant anmeeldn (nen profiel anmaakn) en filmkes köant bekiekn, oordeeln en deeln met aandern. Leu dee at gin profiel hebt köant allene mear kiekn. t Motto van de webstea is ''YouTube, Broadcast Yourself'' (YouTube, Doot Oewzelf Oetzeandn). Doarnöast kan nen gebroeker zinne filmkes trefwöarde tookenn, zodet aandern t makliker veendn köant. YouTube is in [[2005]] op erichet, en heurt non an [[Google Inc.]]
+'''YouTube''' (sprek oet: ''JOEW-tsjoewb'' of ''JOEW-toewb''), in [[Tweante]] vake oet esprökn as ''joetoep'', is ne webstea woerop leu zik köant anmeeldn (nen profiel anmaakn) en filmkes köant bekiekn, oordeeln en deeln met aandern. Leu dee at gin profiel hebt köant allene mear kiekn. t Motto van de webstea is ''YouTube, Broadcast Yourself'' (YouTube, Doot Oewzelf Oetzeandn). Doarnöast kan nen gebroeker zinne filmkes trefwöarde tookenn, zodet aandern t makliker veendn köant. YouTube is in [[2005]] op erichet, en heurt non an [[Google Inc.]] t filmke wat er t earst op ezat is, is ''[[Me at the zoo]]''.
 
-In juli van [[2006]] wördn dr mear as 65.000 filmkes op ezat per dag, en de webstea zelf zea det per dag mear as 100 miljoen moal ekekn wör. Volgens ne Amerikaanse kraante teeldn de webstea in Augustus 2006 mear as 6,1 miljoen filmkes.
+In juli van [[2006]] wördn dr mear as 65.000 filmkes op ezat per dag, en de webstea zelf zea det per dag mear as 100 miljoen moal ekekn wör. Volgens ne Amerikaanse kraante teeldn de webstea in augustus 2006 mear as 6,1 miljoen filmkes.
 
 == Oetgoande verbeendige ==
-* [http://www.youtube.com YouTube.com, de webstea zelf]
+* [http://www.youtube.com/ YouTube.com, de webstea zelf]
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Webstee]]
