*Empty MediaWiki Message*

--- a/UNESCO.mw
+++ b/UNESCO.mw
@@ -1,5 +1,5 @@
-[[File:Flag_of_UNESCO.svg|thumb|right|200px|Vlagge van UNESCO]]
-'''UNESCO''' is ne towyde organisaty van de Vereynigde Natys wat sik gangs höldt med wearldvreyde, bestryding van årmood, duursame untwikkeling en bemiddeling tüsken kulturen. Dat doot se döär sik te richten up skolen, weatenskap, kultuur en kommunikaty. De UNESCO is egrunded up den 16. november [[1945]] med et höyvdkantoor in [[Parys]]. Lid van de organisaty sint 193 ståten.
+[[File:Flag of UNESCO.svg|thumb|200px|Vlagge van UNESCO]]
+'''UNESCO''' is ne towyde organisaty van de [[Vereynigde Natys]] wat sik gangs höldt med wearldvreyde, bestryding van årmood, duursame untwikkeling en bemiddeling tüsken kulturen. Dat doot se döär sik te richten up skolen, weatenskap, kultuur en kommunikaty. De UNESCO is egrunded up den 16. november [[1945]] med et höyvdkantoor in [[Parys]]. Lid van de organisaty sint 193 ståten.
 
 De name UNESCO is ne afkörting vöär et [[engels]]ke ''United Nations Educational, Scientific and Cultural Organization'', de Edukative, Weatenskappelike en Kulturele Organisaty van de Vereynigde Natys.
 
