+[[Kategorie:Gebargte in Duutslaand]]; +[[Kategorie:Noordrien-Westfoaln]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Zeuvengebärgte.mw
+++ b/Zeuvengebärgte.mw
@@ -24,4 +24,5 @@ ofbeelding:Siebengebirge in het 2.jpg|in et Zeuvengebärgte
 </gallery>
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Gebargte in Duutslaand]]
+[[Kategorie:Noordrien-Westfoaln]]
