Sortering van [[:Kategorie:Vrijmezzelderij]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/Vrijmezzelderij.mw
+++ b/Vrijmezzelderij.mw
@@ -26,4 +26,4 @@ Deur meer openhaid deur Vrijmezzelders en t aal meer opkommen van de komplottheo
 == Weblinks ==
 {{Commonscat|Freemasonry}}
 
-[[Kategorie:Vrijmezzelderij]]
+[[Kategorie:Vrijmezzelderij| ]]
