[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Vrijmezzelderij]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Vrymestelarye.mw
+++ b/Vrymestelarye.mw
@@ -28,4 +28,4 @@ En vöäral christelike en islamitiske lüde willet beweyren dat de Vrymetselary
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Vrijmezzelderij| ]]
