+[[Kategorie:Volk]]; +[[Kategorie:Europa]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Slaviske_völker.mw
+++ b/Slaviske_völker.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Slavic_europe.svg|duum|275x275px|
+[[Bestaand:Slavic europe.svg|duum|275x275px|
 Lichtgruun: westslaviske tålen, Donkergruun: oostslaviske tålen, Blauw: süüdslaviske tålen|alt=]]
 De '''Slaviske völker''' ümvat de [[Indo-Uropese taolen|indoeuropaeske]] völker dy ne tål uut de slaviske tålfamily spreakt en wördt an de hand van de onderverdealing van disse tålfamily ünderskeiden in Oost-, West- en Süüd-Slaven.
 
@@ -56,7 +56,8 @@ In Dalmatie en Istrie is der jüüst meer invlood van de romaanske kultuur.
 Vöär den [[Tweede Wereldoorlog|Twaeden Waerldoorlog]] leaven der so en veer miljuun [[Jeuden|Joden]] in slavisk Europa. Döär den Holocaust en emigratsy når vöäral [[Israël|Israel]] en de [[Verienigde Staoten van Amerika|Verenigde Staten]] is öär antal stark ereducaerd. De invlood van de jöödske kultuur, meer bepåld de [[Jiddisj|jiddiske]] kultuur, üp sommige aspekten van de slaviske kultuur valt skonwal noch steads te marken. Andersüm is dit ok et geval.
 
 == Referentsys ==
-
+<references />
 {{Dialekt|act}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Volk]]
+[[Kategorie:Europa]]
