*Empty MediaWiki Message*

--- a/Vrijmezzelderij.mw
+++ b/Vrijmezzelderij.mw
@@ -25,5 +25,6 @@ Deur meer openhaid deur Vrijmezzelders en t aal meer opkommen van de komplottheo
 
 == Weblinks ==
 {{Commonscat|Freemasonry}}
+{{Dialekt|gos}}
 
 [[Kategorie:Vrijmezzelderij| ]]
