--- a/Drachenfels_(Sövengebärgte).mw
+++ b/Drachenfels_(Sövengebärgte).mw
@@ -1,9 +1,9 @@
-De '''Drachenfels''' is 'n 321 meter hoge dode vulkän an de uver van de [[Rijn]], eyne van de zeven toppen van et [[Zeuvengebärgte|Zevengebargte]], tüsken [[Königswinter]] en [[Bad Honnef]], in Düütsland. Üp den top van de Drachenfels ståt de ruïne van 'n kasteel med desölfde nåme. Wat leger ståt slot [[Drachenburg]], dee ebouwd is an et end van de 19e eeuw.
+De '''Drachenfels''' is 'n 321 meter hoge dode vulkän an de uver van de [[Rijn]], eyne van de seven toppen van et [[Zeuvengebärgte|Sövengebargte]], tüsken [[Königswinter]] en [[Bad Honnef]], in Düütsland. Üp den top van de Drachenfels steyt de ruïne van 'n kasteel med desölfde nåme. Wat leger ståt slot [[Drachenburg]], dee ebouwd is an et end van de 19e eyw.
 
-De barg is 'n middelhoge barg. Döär de legende van [[Sygfryd]], et kasteel en et slot, mär vöäral döär et wytse üütsicht vanaf de ruïne üp de Rijn, is et nu 'n belangryke turistiske plåts.
+De barg is 'n middelhoge barg. Döär de legende van [[Sygfryd]], et kasteel en et slot, mär vöäral döär et wytse üütsicht vanaf de ruïne üp de Ryn, is et nu 'n belangryke turistiske plåts.
 
 == Natüürreservaat ==
-De Drachenfels is ene van de oldste natüürreservaten van Düütsland en meskeen ouk van heyl Europa. De [[Prüsiske Staat]] hef de alderbastends mooie berg in 1836 anekocht ümme te sorgen det de berg neet wyters würd anetast. Dee gef de berg den status as natüürreservaat. In 1922 werd disse status wettelijk verankerd in 'n polisyverördening. Ümme et historiske belang van de Drachenfels vöär [[Natuurbeskerming|natüürbeskerming]] is dår in 2002 et museum vöär natüürbeskermingsgeskydenisse ebouwd.
+De Drachenfels is ene van de oldste natüürreservaten van Düütsland en meskeen ouk van heyl Europa. De [[Prüsiske Staat]] hef de alderbastends mooie barg in 1836 anekocht ümme te sorgen det de berg neet wyters würd anetast. Dee gef de berg den status as natüürreservaat. In 1922 werd disse status wettelijk verankerd in 'n polisyverördening. Ümme et historiske belang van de Drachenfels vöär [[Natuurbeskerming|natüürbeskerming]] is dår in 2002 et museum vöär natüürbeskermingsgeskydenisse ebouwd.
 
 == Sagen ==
 Verskillende sagen düden üp 'n draak in de büürte van Drachenfels. Volgens de bekendste sage hef Sygfryd – de held üüt et [[Nibelungenlyd]] – de dwarg Fafnir edood, dee sich in de vorm van 'n draak in 'n grot van disse barg verborg. Döär in et drakenblud te baden, was Sygfryd onkwetsbår ewürdene, mär döär 'n blad üp syne skolder, bleef dee eyne plek kwetsbår. 
