--- a/Jill_Bleiksloot.mw
+++ b/Jill_Bleiksloot.mw
@@ -1,5 +1,7 @@
 '''Jill Bleiksloot''' is een verslaggeafster en presentatrice van de [[Nederlaand|Nederlaandse]] omroep Omroep [[WNL]]. Sunds [[2017]] stiet ze live bi'j locaties veur et pregramma [[Goedemorgen Nederland (WNL)|Goedemorgen Nederland]] op de zender [[NPO 1]]. Zie presenteert ok mangs et ni'jsoaverzicht veur etzölfde pregramma.
 
 In [[2018]] en [[2019]] was zie ook te zien in het pregramma [[Hufterproof]] op de zender [[NPO 3]].
+
 {{Dialekt|sdz}}
+{{DEFAULTSORT:Bleiksloot, Jill}}
 [[Kategorie:Nederlaands presentator]]
