--- a/Nikki_Herr.mw
+++ b/Nikki_Herr.mw
@@ -6,5 +6,7 @@ In de sommer van [[2019]] deed ze met met et pregramma [[De Slimste Mens]].
 
 ==Verwiezing==
 <references/>
+
 {{Dialekt|sdz}}
+{{DEFAULTSORT:Herr, Nikki}}
 [[Kategorie:Nederlaands presentator]]
