--- a/Monzón.mw
+++ b/Monzón.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:castillo monzon.jpg|thumb|250px|Et kesteel van Monzón]]
+[[Ofbeelding:Castillo de Monzon (15530066601).jpg|thumb|250px|Et kesteel van Monzón]]
 '''Monzón''' is een [[gemiente (bestuur)|gemiente]] en een [[stad (woonstee)|stad]] in de [[perveensie]] [[Huesca]] van de [[Spanje|Spaanse]] regio [[Aragón]]. De gemiente het een oppervlakte van 155 [[vierkaante kilemeter|km²]]. In [[2010]] had et zoe'n 17.115 inwoners. Monzón is ok de heufdstad van de [[comarca]] [[Cinca Medio]].
 
 {{Commonscat|Monzón}}
