--- a/Zarathustra.mw
+++ b/Zarathustra.mw
@@ -1,3 +1,5 @@
+[[File:An Image from Zarathustra.jpg|thumb]]
+
 '''Zarathustra''', '''Zarathoestra''' of '''Zoroaster''' was een persiske [[profeet]] en de grundlegger van et [[zoroastrisme]], een [[religie|religy]] dee syn anhangers vöäral in [[India]] hevt. Volgens de legenden was de profeet een skäper en leavden he up et platteland. Rund syn twentigse leavensjår was he dår neet bliede meyr en güng he runddwålen. Nå teen jår kreyg he, esetten an de overs van de Oxus (de Amu Darja) een visioon van de god Ahura Mazda.
 
 == Leaven en leyr ==
