Voetnootverwijzingen achter interpunctie gezet

--- a/Sijpkes.mw
+++ b/Sijpkes.mw
@@ -1,11 +1,11 @@
 [[Bestaand:Omnibus van Sijpkes, lijndienst Buinen-Borger, 1895.jpg|miniatuur|Omnibus van Sijpkes, 1895]]
-'''Sijpkes''' (uutsproak: ''Siepkes'') was eind [[20e ieuw | 20e eeuw]] t greutste parteculiere busbedrief van Noord-Nederlaand<ref name="ArtikelOvernameOost">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19940308-AE0021006&vw=org&lm=sijpkes Sijpkes Reizen neemt Oost over], Nieuwsblad van het Noorden (8 maart 1994).</ref><ref name="ArtikelSnijden">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19961127-AE0011006&vw=org&lm=sijpkes Sijpkes moet hard en diep snijden], Nieuwsblad van het Noorden (27 november 1996).</ref>. t Bedrief reed in die tied doageleks mit bussen tussen [[Grunnen (stad) | Grunnen]] en [[Schiphol]] (soamenwerken mit [[KLM]]<ref name="ArtikelSchipholbus">[https://www.digibron.nl/search/detail/012df8c9397d9c373a9b721d/schipholbus-is-gat-in-de-markt Schipholbus is gat in de markt], Reformatorisch Dagblad (23 november 1992).</ref><ref name="ArtikelJorritsma">[https://resolver.kb.nl/resolve?urn=ddd:010623235:mpeg21:a0334 Jorritsma wil subsidie voor Schipholbus], Leeuwarder Courant (11 mei 1994).</ref>) en tussen Grunnen en [[Enschede]]<ref name="ArtikelNoordOostExpress">[https://resolver.kb.nl/resolve?urn=ABCDDD:010857251:mpeg21:a0462 Eerste commerciële busdienst gaat gebukt onder kortingen], De Volkskrant (1 juli 1989)</ref><ref name="WikiNoordOostExpress">[https://wiki.ovinnederland.nl/wiki/Lijn_Noord-Oost_Express Lijn Noord-Oost Express], OVinNederland.nl.</ref>. Eind [[19e ieuw | 19e]], begun 20e eeuw wer mit omnibussen liendainsten verzörgd in [[Veenkelonie | Grunnegs-Drìntse veenkelonien]].
+'''Sijpkes''' (uutsproak: ''Siepkes'') was eind [[20e ieuw | 20e eeuw]] t greutste parteculiere busbedrief van Noord-Nederlaand.<ref name="ArtikelOvernameOost">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19940308-AE0021006&vw=org&lm=sijpkes Sijpkes Reizen neemt Oost over], Nieuwsblad van het Noorden (8 maart 1994).</ref><ref name="ArtikelSnijden">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19961127-AE0011006&vw=org&lm=sijpkes Sijpkes moet hard en diep snijden], Nieuwsblad van het Noorden (27 november 1996).</ref> t Bedrief reed in die tied doageleks mit bussen tussen [[Grunnen (stad) | Grunnen]] en [[Schiphol]] (soamenwerken mit [[KLM]]<ref name="ArtikelSchipholbus">[https://www.digibron.nl/search/detail/012df8c9397d9c373a9b721d/schipholbus-is-gat-in-de-markt Schipholbus is gat in de markt], Reformatorisch Dagblad (23 november 1992).</ref><ref name="ArtikelJorritsma">[https://resolver.kb.nl/resolve?urn=ddd:010623235:mpeg21:a0334 Jorritsma wil subsidie voor Schipholbus], Leeuwarder Courant (11 mei 1994).</ref>) en tussen Grunnen en [[Enschede]].<ref name="ArtikelNoordOostExpress">[https://resolver.kb.nl/resolve?urn=ABCDDD:010857251:mpeg21:a0462 Eerste commerciële busdienst gaat gebukt onder kortingen], De Volkskrant (1 juli 1989)</ref><ref name="WikiNoordOostExpress">[https://wiki.ovinnederland.nl/wiki/Lijn_Noord-Oost_Express Lijn Noord-Oost Express], OVinNederland.nl.</ref> Eind [[19e ieuw | 19e]], begun 20e eeuw wer mit omnibussen liendainsten verzörgd in [[Veenkelonie | Grunnegs-Drìntse veenkelonien]].
 
 ==Historie==
 [[Bestaand:Sijpkes-210.jpg|miniatuur|n Bus van Sijpkes, Göteborg (Zweden), 1994]]
-Pieter Sijpkes begun in 1895 as omnibusuutboater<ref name="Hofman">Hofman, Beno (2015). ''Van omnibus tot Q-link: de geschiedenis van het busvervoer in Groningen en Drenthe''. OV-Bureau Groningen Drenthe, Assen. ISBN 978-90-77989-82-1.</ref><ref name="LangsDeWegen">[https://langs-de-wegen-s.jimdofree.com/sijpkes/ Langs de Wegen: Sijpkes], Autobus Documentatie Vereniging.</ref> in [[Drìntse Monden | Bunerveen]] mit n liendainst tussen [[Börger]] en [[Knoal (dörp) | Knoal]]<ref name="ArtikelOmnibusBorger">[https://resolver.kb.nl/resolve?urn=MMDA03:000103613:mpeg21:a0006 Artikel in de Provinciale Drentsche en Asser courant (27 augustus 1897)].</ref> en loater ook tussen Bunerveen en [[Assen]]<ref name="ArtikelOmnibusAssen">[https://resolver.kb.nl/resolve?urn=MMDA03:000107110:mpeg21:a0026 Omnibusdienst Buinerveen-Assen], Provinciale Drentsche en Asser courant (15 april 1899).</ref>. t Bedrief gruide in de loop der tied uut tot n grode raaisorganisoatsie<ref name="ArtikelHarmSijpkes">[https://resolver.kb.nl/resolve?urn=ddd:011018445:mpeg21:a0588 'We hebben onze body zo breed mogelijk gemaakt'], Nieuwsblad van het Noorden (29 april 1989).</ref>, onder aander deur de overnoame van [[Bergman's Autodienst | Bergman]] (1974), [[Reiscentrale Twente]] (RCT) (1975), [[Elema-Stollenga's Autodiensten | ESA]] (1985) en [[Harmanni]] (1990), en har busgeroazies in Knoal, Assen, [[Zwolle]] en [[Moarum]]. Sijpkes was aandeelholder van de laandelke touroperator De Jong Intra en har raaisburo's in Knoal, [[Troapel]], Grunnen, [[Veendaam]], [[n Daam | Appengedaam]], [[Hoogkìrk | Hoogkerk]] en [[Hoogezaand-Sapmeer | Hoogezaand]]. Dr wer veul soamenwaarkt mit [[Groninger Autobusdienst Onderneming|GADO]]<ref name="ArtikelGADO">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19921120-AE0021010&vw=org&lm=sijpkes Gado en Sijpkes voorlopers in vervoersland], Nieuwsblad van het Noorden (20 november 1992).</ref>.
+Pieter Sijpkes begun in 1895 as omnibusuutboater<ref name="Hofman">Hofman, Beno (2015). ''Van omnibus tot Q-link: de geschiedenis van het busvervoer in Groningen en Drenthe''. OV-Bureau Groningen Drenthe, Assen. ISBN 978-90-77989-82-1.</ref><ref name="LangsDeWegen">[https://langs-de-wegen-s.jimdofree.com/sijpkes/ Langs de Wegen: Sijpkes], Autobus Documentatie Vereniging.</ref> in [[Drìntse Monden | Bunerveen]] mit n liendainst tussen [[Börger]] en [[Knoal (dörp) | Knoal]]<ref name="ArtikelOmnibusBorger">[https://resolver.kb.nl/resolve?urn=MMDA03:000103613:mpeg21:a0006 Artikel in de Provinciale Drentsche en Asser courant (27 augustus 1897)].</ref> en loater ook tussen Bunerveen en [[Assen]].<ref name="ArtikelOmnibusAssen">[https://resolver.kb.nl/resolve?urn=MMDA03:000107110:mpeg21:a0026 Omnibusdienst Buinerveen-Assen], Provinciale Drentsche en Asser courant (15 april 1899).</ref> t Bedrief gruide in de loop der tied uut tot n grode raaisorganisoatsie<ref name="ArtikelHarmSijpkes">[https://resolver.kb.nl/resolve?urn=ddd:011018445:mpeg21:a0588 'We hebben onze body zo breed mogelijk gemaakt'], Nieuwsblad van het Noorden (29 april 1989).</ref>, onder aander deur de overnoame van [[Bergman's Autodienst | Bergman]] (1974), [[Reiscentrale Twente]] (RCT) (1975), [[Elema-Stollenga's Autodiensten | ESA]] (1985) en [[Harmanni]] (1990), en har busgeroazies in Knoal, Assen, [[Zwolle]] en [[Moarum]]. Sijpkes was aandeelholder van de laandelke touroperator De Jong Intra en har raaisburo's in Knoal, [[Troapel]], Grunnen, [[Veendaam]], [[n Daam | Appengedaam]], [[Hoogkìrk | Hoogkerk]] en [[Hoogezaand-Sapmeer | Hoogezaand]]. Dr wer veul soamenwaarkt mit [[Groninger Autobusdienst Onderneming|GADO]].<ref name="ArtikelGADO">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19921120-AE0021010&vw=org&lm=sijpkes Gado en Sijpkes voorlopers in vervoersland], Nieuwsblad van het Noorden (20 november 1992).</ref>
 
-In 2011 ging t bedrief failliet<ref name="ArtikelFaillissementDvhN">[https://www.dvhn.nl/archief/Reisbureau-Sijpkes-stevent-af-op-faillissement-20696463.html Reisbureau Sijpkes stevent af op faillissement], Dagblad van het Noorden (16 september 2011).</ref><ref name="ArtikelFaillissementRTVN">[https://www.rtvnoord.nl/nieuws/104068/Ook-touringcarbedrijf-van-Sijpkes-failliet Ook touringcarbedrijf van Sijpkes failliet], RTV Noord (5 oktober 2011).</ref> en wer overnomen deur Arriva<ref name="ArtikelArriva">[https://www.rtvnoord.nl/nieuws/104502/Arriva-Touring-neemt-Sijpkes-over Arriva Touring neemt Sijpkes over], RTV Noord (22 oktober 2011).</ref>.
+In 2011 ging t bedrief failliet<ref name="ArtikelFaillissementDvhN">[https://www.dvhn.nl/archief/Reisbureau-Sijpkes-stevent-af-op-faillissement-20696463.html Reisbureau Sijpkes stevent af op faillissement], Dagblad van het Noorden (16 september 2011).</ref><ref name="ArtikelFaillissementRTVN">[https://www.rtvnoord.nl/nieuws/104068/Ook-touringcarbedrijf-van-Sijpkes-failliet Ook touringcarbedrijf van Sijpkes failliet], RTV Noord (5 oktober 2011).</ref> en wer overnomen deur Arriva.<ref name="ArtikelArriva">[https://www.rtvnoord.nl/nieuws/104502/Arriva-Touring-neemt-Sijpkes-over Arriva Touring neemt Sijpkes over], RTV Noord (22 oktober 2011).</ref>
 
 {{Commonscat|Sijpkes}}
 
