ik hebbe vernöämen at -ed neet hoovt ümdat der al nen t in ericht steyt.

--- a/Netflix.mw
+++ b/Netflix.mw
@@ -1,4 +1,4 @@
-'''Netflix, Inc.''' is et  [[Vereynigde Ståten|amerikaanske]] bedryv achter en achterinternetplatform wårup films, dokumentäres en tv-ryges rechtstreaks te bekyken sint. Et höyvdkantoor sit in de stad [[Los Gatos (Kalifornie)|Los Gatos]] in den ståt [[Kalifornie]]. Et wör uperichted in [[1997]] döär Reed Hastings en Marc Randolph, vanuut [[Scotts Valley]], ouk in Kalifornie. 
+'''Netflix, Inc.''' is et  [[Vereynigde Ståten|amerikaanske]] bedryv achter en achterinternetplatform wårup films, dokumentäres en tv-ryges rechtstreaks te bekyken sint. Et höyvdkantoor sit in de stad [[Los Gatos (Kalifornie)|Los Gatos]] in den ståt [[Kalifornie]]. Et wör upericht in [[1997]] döär Reed Hastings en Marc Randolph, vanuut [[Scotts Valley]], ouk in Kalifornie. 
 
 Et bedryv büdt abonnementen vöär ströymde films en televisyryges. Mangs sint dee van darden, mär inmiddels hebbet se ouk geld sat üm se selv te låten maken. In oktober 2020 had Netflix 195 miljoon inskreavenen oaver de heyle wearld, wårunder 73 miljoon in de Vereynigde Ståten. Et andeyl neaderlandske inskryvers is inmiddels souwat 3 miljoon<ref>[https://www.televizier.nl/netflix/aantal-nederlandse-netflix-abonnees-afgelopen-maanden-flink-gegroeid televizier.nl. 'Aantal Nederlandse netflix-abonnees afgelopen maanden flink gegroeid.'] Skreaven up 21 april 2020. Bekeaken up 4 december 2020.</ref>
 
