kunde - künnen, is my esegd. Böörse kümt van oldsassisk burse en middelsassisk börse/burse/borse

--- a/Netflix.mw
+++ b/Netflix.mw
@@ -6,9 +6,9 @@ Netflix is wearldwyd te krygen, behalve in [[China]], [[Syrie]], [[Noordkorea]] 
 
 Netflix deade eyrst geld verdenen med DVD-verkoup en postverhüür, mär Hastings deade der nå et eyrste jår et verkoupen al achterhen en richteden sik up de verhüür van DVD's. In [[2007]] breidden Netflix et sakelike anbod uut do as media ströymen möägelik wör, mär se hölden sik noch altyd gangs med DVD- en Blu-rayuutleyn. In 2010 güng Netflix internationaal, med ströymingdeensten in [[Kanada]]. Neet lange dårnå breidden se uut når Latynsk-Amerika en de [[Karaiben]]. Netflix begün selv te produceren in 2013, med as eyrste ryge et politike drama [[House of Cards]].
 
-Seyd 2012 is Netflix aktiver as producent en anbeder van films en televisyryges. Dårvöär bedet se filminhold under de nömer 'Netflix Original' ("''van Netflix''") in öär online oaversicht. Anvang 2016 was Netflix al in 190 landen te krygen. Se gavven in 2016 ungeväär 126 tv-ryges en films uut under eygen name. Dår konde gin ander netwark of kabelkanaal teagenan.
+Seyd 2012 is Netflix aktiver as producent en anbeder van films en televisyryges. Dårvöär bedet se filminhold under de nömer 'Netflix Original' ("''van Netflix''") in öär online oaversicht. Anvang 2016 was Netflix al in 190 landen te krygen. Se gavven in 2016 ungeväär 126 tv-ryges en films uut under eygen name. Dår kunde gin ander netwark of kabelkanaal teagenan.
 
-Döärdat se sou druk sint up ny materiaal, de rechten vöär andere filminhold en uutbreiding döär 190 landen steyt et bedryv vöär miljarden in et roud: $21,9 miljard in september 2017. Dårvan is $6,5 langloupenden skuld. In 2018 kundigden se an dat se der noch es twey miljard an skulden by upnömmen üm meyr films te künnen maken. Up den 10. july 2020 was Netflix et grötste media- en vermaakbedryv up de böärse.
+Döärdat se sou druk sint up ny materiaal, de rechten vöär andere filminhold en uutbreiding döär 190 landen steyt et bedryv vöär miljarden in et roud: $21,9 miljard in september 2017. Dårvan is $6,5 langloupenden skuld. In 2018 kundigden se an dat se der noch es twey miljard an skulden by upnömmen üm meyr films te künnen maken. Up den 10. july 2020 was Netflix et grötste media- en vermaakbedryv up de böörse.
 
 {{Bron|
 <references/>
