--- a/Vootbal.mw
+++ b/Vootbal.mw
@@ -36,7 +36,7 @@ Ne ploge of manskap besteyt uut veer spöälerården: den doolman, verdeadigers,
 Den träner kan der vöär kesen üm meyr verdeadigers of jüüst meyr anvallers in et veld te brengen. Tydens nen wedstryd mag hee drey mål nen spöäler wesselen. Dit kan as nen spöäler möde begint te worden, ne geale kaarte kreagen hevt of hee de taktik van de wedstryd wil veranderen. As ne partye ''achter'' steyt in de pünten, kan nen träner der vöär kesen üm anvallers te wesselen vöär verdeadigers. Andersümme kan et good weasen üm nen verdeadiger te wesselen vöär nen anvaller as de teagenstand nit te houge is.
 
 == Neadersasssiske vootbalplogen ==
-In et sassiske språkgebeed sint een antal betaalde vootbalplogen: [[FC Grönnen]], [[SC Veendam]], [[FC Emmen]], [[FC Zwolle]], [[Go Ahead Eagles]] (uut [[Deaventer]]), [[FC Tweante]], [[Heracles Almelo]], [[AGOVV Apeldoorne]] en [[De Graafschap]] (uut [[Deutekem|Dötekum]]). [[Vitesse]] uut [[Arnem]] ligt der korrekt teagenan. In de [[Duutslaand|düütske]] [[Bundesliga]] gevt et [[Werder Bremen]], dee as de neadersassiske språke as marketingmiddel bruket. Dårnöäst gevt et noch de [[Hamburger SV]].
+In et sassiske språkgebeed sint een antal betaalde vootbalplogen: [[FC Grönnen]], [[SC Veendam]] (failliet), [[FC Emmen]], [[FC Zwolle|PEC Zwolle]], [[Go Ahead Eagles]] (uut [[Deaventer]]), [[FC Tweante]], [[Heracles Almelo]], [[AGOVV Apeldoorne]] (failliet) en [[De Graafschap]] (uut [[Deutekem|Dötekum]]). [[Vitesse]] uut [[Arnem]] ligt der korrekt teagenan. In de [[Duutslaand|düütske]] [[Bundesliga]] gevt et [[Werder Bremen]], dee as de neadersassiske språke as marketingmiddel bruket. Dårnöäst gevt et noch de [[Hamburger SV]].
 
 == [[Nedersaksisch|Neersassies]] ==
 * '''Nedersaksies in Nederlaand''': ''voe{{small()|t}}bal''
