--- a/Pennsylvanie.mw
+++ b/Pennsylvanie.mw
@@ -44,7 +44,8 @@ Gröttere nömenswaerde städen sint:
 * [[Hazleton]] 
 * [[Erie (Pennsylvanie)|Erie]] 
 * [[Williamsport (Pennsylvanie)|Williamsport]]
-[[Chambersburg (Pennsylvanie)|Chambersburg]] 
+*[[Chambersburg (Pennsylvanie)|Chambersburg]]
+
 * [[York (Pennsylvanie)|Jork]]
 * [[Carlisle (Pennsylvanie)|Carlisle]]
 * [[Harrisburg (Pennsylvanie)|Harrisburg]] (höyvdstad)
