--- a/Verienigde_Staoten_van_Amerika.mw
+++ b/Verienigde_Staoten_van_Amerika.mw
@@ -25,7 +25,7 @@ President is [[Donald Trump]].
 
 == Politieke geografie ==
 De volgende staoten maken diel uut van de Verienigde Staoten:
-[[Alabama]] - [[Alaska]] - [[Arizona]] - [[Arkansas (stoat)|Arkansas]] - [[Kalifornië|Californië]] - [[Colorado]] - [[Konnektikut|Connecticut]] - [[Delaware (stoat)|Delaware]] - [[Florida (stoat)|Florida]] - [[Georgia]] - [[Hawaï]] - [[Idaho]] - [[Illinois]] - [[Indiana]] - [[Iowa]] - [[Kansas]] - [[Kentucky]] - [[Louisiana]] - [[Maine]] - [[Maryland]] - [[Massachusetts]] - [[Michigan]] - [[Minnesota]] - [[Mississippi (stoat)|Mississippi]] - [[Missouri|Missouri]] - [[Montana]] - [[Nebraska]] - [[Nevada (stoat)|Nevada]] - [[New Hampshire]] - [[Nyjersey]] - [[New Mexico]] - [[Nyjork (ståt)|New York]] - [[North Carolina]] - [[North Dakota]] - [[Ohio (staot)|Ohio]] - [[Oklahoma]] - [[Oregon]] - [[Pennsylvania]] - [[Rhode Island (staot)|Rhode Island]] - [[South Carolina]] - [[South Dakota]] - [[Tennessee]] - [[Texas]] - [[Utah]] - [[Vermont]] - [[Virginia]] - [[Washington (stoat)|Washington]] - [[West Virginia]] - [[Wisconsin]] - [[Wyoming]]
+[[Alabama]] - [[Alaska]] - [[Arizona]] - [[Arkansas (stoat)|Arkansas]] - [[Kalifornië|Californië]] - [[Colorado]] - [[Konnektikut|Connecticut]] - [[Delaware (stoat)|Delaware]] - [[Florida (stoat)|Florida]] - [[Georgia]] - [[Hawaï]] - [[Idaho]] - [[Illinois]] - [[Indiana]] - [[Iowa]] - [[Kansas]] - [[Kentucky]] - [[Louisiana]] - [[Maine]] - [[Maryland]] - [[Massachusetts]] - [[Michigan]] - [[Minnesota]] - [[Mississippi (stoat)|Mississippi]] - [[Missouri|Missouri]] - [[Montana]] - [[Nebraska]] - [[Nevada (stoat)|Nevada]] - [[New Hampshire]] - [[Nyjersey]] - [[New Mexico]] - [[Nyjork (ståt)|New York]] - [[North Carolina]] - [[North Dakota]] - [[Ohio (ståt)|Ohio]] - [[Oklahoma]] - [[Oregon]] - [[Pennsylvania]] - [[Rhode Island (staot)|Rhode Island]] - [[South Carolina]] - [[South Dakota]] - [[Tennessee]] - [[Texas]] - [[Utah]] - [[Vermont]] - [[Virginia]] - [[Washington (stoat)|Washington]] - [[West Virginia]] - [[Wisconsin]] - [[Wyoming]]
 en [[Washington D.C.|District van Columbia]], dit is allien gien staot maor 't heufdstedelik distrikt.
 
 == Steden ==
