*Empty MediaWiki Message*

--- a/Nedersaksische_podcasts.mw
+++ b/Nedersaksische_podcasts.mw
@@ -2,13 +2,13 @@
 
 ==Lieste van Nedersaksische podcasts==
 
-* De '''Wearldspråke Podcast''' is een op 18 juni 2018 begunde podcast, te beluustern via verscheiden platforms waoronder [[YouTube]] en [[Spotify]]. De maker is [[Martin ter Denge]] uut [[Riessen]], [[Aoveriessel]]. De podcast, in 't [[Riessens]] eprissenteerd, giet aover de Nedersaksische taal zölf. De insteek is det die serieus eneumen mut wörden as een volweerdige, moderne taal waor toekomst in kan zitten as de gebrukers dervan det zölf wilt. Bezundere andacht is der veur broggenbouwerije tussen sprekers in Nederlaand en sprekers in Duutslaand. Mangs prissenteert Ter Denge de podcast allennig, mangs is der een gast. Miestal is Wearldspråke puur audio, een enkele keer kriej der bield bij. Per 23 meie 2020 bint der 33 ofleverings.
+* De '''Wearldspråke Podcast''' is een op 18 juni 2018 begunde podcast, te beluustern via verscheiden platforms waoronder [[YouTube]] en [[Spotify]]. De maker is [[Martin ter Denge]] uut [[Riessen]], [[Aoveriessel]]. De podcast, in 't [[Riessens]] eprissenteerd, giet aover de Nedersaksische taal zölf. De insteek is det die serieus eneumen mut wörden as een volweerdige, moderne taal waor toekomst in kan zitten as de gebrukers dervan det zölf wilt. Bezundere andacht is der veur broggenbouwerije tussen sprekers in Nederlaand en sprekers in Duutslaand. Mangs prissenteert Ter Denge de podcast allennig, mangs is der een gast. Miestal is Wearldspråke puur audio, een enkele keer kriej der bield bij. Per december 2020 bint der 35 ofleverings.
 
 * '''WATATA''' is een op 5 april 2020 estarte audiopodcast op Spotify, begund um luusteraars [[Tweants|Twèentstalige]] dieverdaotsie te brengen in [[coronavirus|coronatied]], veural as ze beveurbield wegens leeftied an huus ebunden bint. De prissentatoren bint Martin ter Denge en Gerben Voortman uut Riessen. De titel van de show beduudt ''Wa's dat dan'', de reactie die volgens de makers veul luusteraars zult hebben wegens de naodrok op geïmproviseerde kurendrieverije daor aj beter gien diepere betiekenis achter kunt zuken.
 
 * '''De Grunneger Podcast''' is in september 2020 begund deur [[Ingeborg Nienhuis]] en is mit op Spotify beschikber. Nienhuis is schriefster en is sinds 2016 streektaalfunctionaoris bij 't [[Bureau Groninger Taal en Cultuur]].
 
-* '''Plattfunk – Der Podcast auf Hoch- und Plattdeutsch''' is een op 24 febrewaori 2020 estarte [[Platduuts|Platduutse]] audiopodcast op [[YouTube]], eprissenteerd deur Thorsten Börnsen en Nikos Saul. De podcast giet aover allerhaande onderwarpen. Alle keren prat iene van de beiden Platduuts en de aander [[Hoogduuts]]. Per 19 meie 2020 bint der vief ofleverings.
+* '''Plattfunk – Der Podcast auf Hoch- und Plattdeutsch''' is een op 24 febrewaori 2020 estarte [[Platduuts|Platduutse]] audiopodcast op [[YouTube]], eprissenteerd deur Thorsten Börnsen en Nikos Saul. De podcast giet aover allerhaande onderwarpen. Alle keren prat iene van de beiden Platduuts en de aander [[Hoogduuts]]. Per 3 december 2020 bint der negen ofleverings.
 
 * De '''Plautdietsch PlautCast''' is een op YouTube te bekieken videopodcast in 't [[Plautdietsch]], een vörm van Nedersaksisch die veural in Noord-, Midden- en Zuud-Amerika espreuken wördt deur lu van [[Russische Mennoniet|Russisch-Mennonitische]] ofkomst. De prissentatoren bint twee mansluden, Ken en Vern, uut [[Winnipeg]], [[Canada]]. Per 28 april 2020 hebt ze 76 ofleverings emeuken.
 
