/* Wus ie det... */

--- a/Shout_(Tears_for_Fears).mw
+++ b/Shout_(Tears_for_Fears).mw
@@ -66,7 +66,7 @@ Er wördt väke edacht det et nommer te maken hef met therapie waoras ie oe gevo
 == Wus ie det... ==
 
 * In et nommer de klank <nowiki>''ARR1''</nowiki> te heuren is? Disse klank wier espölt op een [[Fairlight CMI]].<ref>[https://www.whosampled.com/sample/663693/Tears-for-Fears-Shout-Fairlight-CMI-ARR1/ Tears for Fears's 'Shout' sample] WhoSampled.com</ref>
-* Vief keer ecovered is deur [[Concrete Blond]] ([[1994]]), [[Disturbed]] ([[2000]]), [[Alexis Jordan]] ([[2011]]), [[Scandroid]] ([[2016]]) en [[Grum]]?
+* Shout in totaal vief keer ecovered is deur [[Concrete Blond]] ([[1994]]), [[Disturbed]] ([[2000]]), [[Alexis Jordan]] ([[2011]]), [[Scandroid]] ([[2016]]) en [[Grum]]?
 
 ==Verwiezing==
 <references/>
