Verwysing nå döärverwyssyde repareerd ([[Malta]] nå [[Malta (eilaand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Spraoje.mw
+++ b/Spraoje.mw
@@ -15,7 +15,7 @@ Spraojen kunnen lang achter mekaar zingen, t geluud dat ze hierbie maken klinkt 
 Veural spraojen vliegen in t naojaor vake in grote groepen ([[zwarm|koppels]]). In t [[Deens]] gebruken ze hierveur t begrip ''sort sol'' en in t [[Engels]] ''black sun'' (letterlik: ''zwarte zunne'').
 
 == Ondersoorten ==
-In Europa koemen twee [[soort]]en spraojen veur, de 'gewone spraoje', (''Sturnus vulgaris'') en de [[zwarte spraoje]] (''Sturnus unicolor''). De gangbaore maniere um te beslissen of soorten verschillend bin of dat t allinnig mer variëteiten bin van t zelfde soorte, is dernaor te kieken of ze der eigen onder natuurlike umstaandighejen mengen. Mer umdat de breuigebiejen van disse twee soorten/variëteiten niet overlappend bin is t niet meugelik hier n definitief antwoord op te geven. De zwarte spraoje breuit op t [[Iberies Schiereilaand]] en de grootste Middellaandse Zee-eilaanden (gien gegevens beschikbaor over [[Malta]] en [[Syprus]])
+In Europa koemen twee [[soort]]en spraojen veur, de 'gewone spraoje', (''Sturnus vulgaris'') en de [[zwarte spraoje]] (''Sturnus unicolor''). De gangbaore maniere um te beslissen of soorten verschillend bin of dat t allinnig mer variëteiten bin van t zelfde soorte, is dernaor te kieken of ze der eigen onder natuurlike umstaandighejen mengen. Mer umdat de breuigebiejen van disse twee soorten/variëteiten niet overlappend bin is t niet meugelik hier n definitief antwoord op te geven. De zwarte spraoje breuit op t [[Iberies Schiereilaand]] en de grootste Middellaandse Zee-eilaanden (gien gegevens beschikbaor over [[Malta (eilaand)|Malta]] en [[Syprus]])
 
 == Introduksie in Noord-Amerika ==
 Liek as de meens is de spraoje n kolonist in Noord-Amerika. Zien verspreiding is daor aordig bekend. Zien introduksie is n gevolg van bewust meenselik haandelen. In t begin sleug de introduksie van de spraoje niet an. ([[Ohio (staot)|Ohio]] 1872-1873, 1877 en 1887 [[Niej-York]], 1884 [[Niej-Jersey]] en [[Massachusetts]], 1887 weer Massachusetts, 1897 [[Pennsylvanië]], 1889 en 1892 [[Oregon]]). Mer Eugen Schieffelin, die zien eigen had veureneumen elke soorte die in de warken van Shakespeare veurkwam in de Verenigden Staoten te introduseren en die in de jaoren zestig (van de negentiende eeuw) al mit sukses de [[huusmosse]] introduseerd had, leut in 1890 n groepjen van zo'n zestig uut Engelaand aofkomstige spraojen los in [[Central Park]] (Niej-York) en op de zelfde plekke n jaor laoter nog es n stuk of veertig. Schiefflin gung regelmaotig effen vragen bie t sentrale punt waor alle informasie op dit gebied bie mekaar kwam (t [[Museum of Natural History]]) of der al nieje waornemingen edaon waren. Uutgerekend onder de dakpannen van ditzelfde museum wördden in 1891 t eerste [[voegelnest|nest]] waoreneumen. Meer breuigevallen volgden. Binnen tien jaor was de spraoje n vaste bewoener in n gebied zo groot as Nederlaand en binnen dartig jaor kon e as gewone bewoener van noordoost-Amerika ezien wörden tot an ongeveer de grens mit Kanada (n gebied zo groot as West-Europa). De eerste waornemingen van de to nog geïsoleerden spraojen an de westkust waren in de wienters van 1946-49 en in de zoemer van 1949. (De spraoje kömp zo verspreid veur deur zien trekneigingen in de wienter.) Tegenswoordig kömp de spraoje zowat over t gehele Noord-Amerikaanse kontinent veur, oek in Kanada en zelfs Alaska (al kömp e boven de poolsirkel natuurlik niet meer in groten getallen veur).
