--- a/Netflix.mw
+++ b/Netflix.mw
@@ -2,7 +2,7 @@
 
 Et bedryv büdt abonnementen vöär ströymde films en televisyryges. Mangs sint dee van darden, mär inmiddels hebbet se ouk geld sat üm se selv te låten maken. In oktober 2020 had Netflix 195 miljoon inskreavenen oaver de heyle wearld, wårunder 73 miljoon in de Vereynigde Ståten. Et andeyl neaderlandske inskryvers is inmiddels souwat 3 miljoon<ref>[https://www.televizier.nl/netflix/aantal-nederlandse-netflix-abonnees-afgelopen-maanden-flink-gegroeid televizier.nl. 'Aantal Nederlandse netflix-abonnees afgelopen maanden flink gegroeid.'] Skreaven up 21 april 2020. Bekeaken up 4 december 2020.</ref>
 
-Netflix is wearldwyd te krygen, behalve in [[China]], [[Syrie]], [[Noordkorea]] en de [[Krim]] (vanweage amerikaanske strafmåtregels). In 2020 had Netflix en inkummen van $1,2 miljard. Et bedryv hevt kantoren in [[Frankryk]], et [[Vereynigd Köäningryk]], [[Brasilie]], [[Neaderland]], [[India]], [[Japan]] en [[Süüdkorea]]. Netflix is lid van de Motion Picture Association, wårmed se filminhold van oaver de heyle wearld produceert en verspreidet.
+Netflix is wearldwyd te krygen, behalve in [[Volksrippebliek China|China]], [[Syrie]], [[Noordkorea]] en de [[Krim]] (vanweage amerikaanske strafmåtregels). In 2020 had Netflix en inkummen van $1,2 miljard. Et bedryv hevt kantoren in [[Frankryk]], et [[Vereynigd Köäningryk]], [[Brasilie]], [[Neaderland]], [[India]], [[Japan]] en [[Süüdkorea]]. Netflix is lid van de Motion Picture Association, wårmed se filminhold van oaver de heyle wearld produceert en verspreidet.
 
 Netflix deade eyrst geld verdenen med DVD-verkoup en postverhüür, mär Hastings deade der nå et eyrste jår et verkoupen al achterhen en richteden sik up de verhüür van DVD's. In [[2007]] breidden Netflix et sakelike anbod uut do as media ströymen möägelik wör, mär se hölden sik noch altyd gangs med DVD- en Blu-rayuutleyn. In 2010 güng Netflix internationaal, med ströymingdeensten in [[Kanada]]. Neet lange dårnå breidden se uut når Latynsk-Amerika en de [[Karaiben]]. Netflix begün selv te produceren in 2013, med as eyrste ryge et politike drama [[House of Cards]].
 
