--- a/Pennsylvanie.mw
+++ b/Pennsylvanie.mw
@@ -15,7 +15,7 @@
 | ofkorting = PA
 }}
 
-'''Pennsylvanie''' ([[Engels]]k: ''pennsylvanie'', [[Pennsylvanies-Duuts|pennsylvanisk düütsk]]: ''Pennsilfaani''), officieel et Pennsylvaniske Gemeynebest, is eyne van de [[Vereynigde Ståten]] van Amerika. Wat kultuur angeyt höyrt et in de noordoustelike, [[Groutemearenstreake|groutemearen]]-, [[Appalachen]] en [[Midatlantiske streake]]n van Amerika. Et grenset an [[Delaware]] up et süüdousten, [[Maryland]] up et süden, [[Westvirginia]] up et süüdwesten, [[Ohio]] up et westen, et [[Eriemear]] en de [[Kanada|kanadeeske]] provincy [[Ontario]] up et noordwesten, [[Nyjork (ståt)|Ståt Nyjork]] up et noorden en [[Nyjersey]] up et ousten. Et [[Appalachen]]-gebargde löpt der dwars döärhen. 
+'''Pennsylvanie''' ([[Engels]]k: ''Pennsylvania'', [[Pennsylvanies-Duuts|pennsylvanisk düütsk]]: ''Pennsilfaani''), officieel et Pennsylvaniske Gemeynebest, is eyne van de [[Vereynigde Ståten]] van Amerika. Wat kultuur angeyt höyrt et in de noordoustelike, [[Groutemearenstreake|groutemearen]]-, [[Appalachen]] en [[Midatlantiske streake]]n van Amerika. Et grenset an [[Delaware]] up et süüdousten, [[Maryland]] up et süden, [[Westvirginia]] up et süüdwesten, [[Ohio]] up et westen, et [[Eriemear]] en de [[Kanada|kanadeeske]] provincy [[Ontario]] up et noordwesten, [[Nyjork (ståt)|Ståt Nyjork]] up et noorden en [[Nyjersey]] up et ousten. Et [[Appalachen]]-gebargde löpt der dwars döärhen. 
 
 Wat grötde angeyt is Pennsylvanie den 33. ståt en hevt vulgens ne telling van 2010 up veer ståten nå de meyste inwoaners. Pennsylvanie's twey grötste städen sint [[Philadelphia]] (1.580.863 inwoaners) en [[Pittsburgh (Pennsylvanie)|Pittsburgh]] (302.407). De höyvdstad is [[Harrisburg (Pennsylvanie)|Harrisburg]]. Et hevt 225 km an waterlyne, langs et Eriemear en de rivyr de [[Delaware (rivyr)|Delaware]].
 
