Verwysing nå döärverwyssyde repareerd ([[Australië]] nå [[Australië (laand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Shout_(Tears_for_Fears).mw
+++ b/Shout_(Tears_for_Fears).mw
@@ -9,7 +9,7 @@ Er wördt väke edacht det et nommer te maken hef met therapie waoras ie oe gevo
 !Waor
 |-
 |1
-|[[Nederlaand]], [[Duutslaand]],[[Zwitserlaand]], [[Canada]], [[Australië]], [[Nieuw-Zeelaand|Nij-Zeelaand]]
+|[[Nederlaand]], [[Duutslaand]],[[Zwitserlaand]], [[Canada]], [[Australië (laand)|Australië]], [[Nieuw-Zeelaand|Nij-Zeelaand]]
 |-
 |2
 |[[Italië]], [[Zuud-Afrika]], [[Vlaanderen]] ([[Radio 2 Top 30]])
