*Empty MediaWiki Message*

--- a/Shout_(Tears_for_Fears).mw
+++ b/Shout_(Tears_for_Fears).mw
@@ -1,4 +1,4 @@
-'''Shout''' is een nommer van et meziekduo [[Tears for Fears]]. Et nommer beheurd töt et [[genre]] [[New Wave]] (Nije Golf) en [[synthpop]]. Et nommer is in [[1984]] op enömmen in [[Beckington]] in de [[The Wood Hall]] en is in [[Nederlaand]] uut ebracht in et begun van [[1985]]. In et [[Verenigd Koninkriek]] was et nommer al op [[19 november]] 1984 uut egeaven. Et is de twiede single in et twiede studioalbum ''Songs from the Big Chair''. De album värsie duurt 6 minuten en 31 seconden en de single värsie 3 minuut 59. Et nommer is eschreaven deur [[Roland Orzabal]] en [[Ian Stanley]] en is produceerd deur [[Chris Hughes]]. De labels bint [[Phonogram Records]] en [[Mercury Records]].
+'''Shout''' is een nommer van et meziekduo [[Tears for Fears]]. Et nommer beheurd töt et [[genre]] [[New Wave]] (Nije Golf) en [[synthpop]]. Et nommer is in [[1984]] op enömmen in [[Beckington]] in de [[The Wood Hall]] en is in [[Nederlaand]] uut ebracht in et begun van [[1985]]. In et [[Verenigd Keuninkriek]] was et nommer al op [[19 november]] 1984 uut egeaven. Et is de twiede single in et twiede studioalbum ''Songs from the Big Chair''. De album värsie duurt 6 minuten en 31 seconden en de single värsie 3 minuut 59. Et nommer is eschreaven deur [[Roland Orzabal]] en [[Ian Stanley]] en is produceerd deur [[Chris Hughes]]. De labels bint [[Phonogram Records]] en [[Mercury Records]].
 
 Er wördt väke edacht det et nommer te maken hef met therapie waoras ie oe gevoels beschrieft. [[Roland Orzabal]] van Tears for Fears hef echter ezegd det et nommer een poletiek protest teagen de [[Kolde Oorlog]] is. In de hiele wereld was et nommer een hit. In Nederlaand was et völle te heuren op [[Hilversum 3]] en stund et op plek 1 in de hitliesten [[Nationale Hitparade]], [[Nederlaandse Top 40]] en de [[Amerikaanse Billboard Hot 100]].
 
@@ -18,7 +18,7 @@ Er wördt väke edacht det et nommer te maken hef met therapie waoras ie oe gevo
 |[[Polen]]
 |-
 |4
-|[[Verenigd Koninkriek]]
+|[[Verenigd Keuninkriek]]
 |-
 |5
 |[[Ierlaand (laand)|Ierlaand]], [[Noorweagen]]
